--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="index.js" defer></script>
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <div class="container">
+        
+    </div>
 </body>
 </html>
