added reset panel button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="container">
-        
+
+    </div>
+    <div class="controls">
+        <button class="reset-panel">Reset panel</button>
     </div>
 </body>
 </html>
